@@ -14,6 +14,7 @@ Here you can see the list of changes between each Holocron release.
 - Fixed Markdown title parser for documents with multiple <h1> titles..
 - Fixed security issue when content author may steal private data through
   content's meta header.
+- Fixed YAML header parser for documents with multiple ``---`` signs.
 
 
 0.1.1 (2015-08-22)
